[package]
name = "pjatk_drives"
version = "0.1.0"
edition = "2021"
authors = ["FssAy"]


[dependencies]
tracing = "0.1.34"
ansi_term = "0.12.1"
config = "0.13.1"
anyhow = "1.0.57"
serde_json = "1.0.81"
lazy_static = "1.4.0"
async-trait = "0.1.56"
tokio-rustls = "0.23.4"
dns-lookup = "1.0.8"
sha2 = "0.10.2"
base64 = "0.13.0"
cookie = "0.16.0"
chrono = "0.4.19"
urlencoding = "2.1.0"

[dependencies.reqwest]
version = "0.11.11"
features = []

[dependencies.ssh2]
version = "0.9.3"
features = [
    "openssl-on-win32",
]

[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["env-filter"]

[dependencies.async_ftp]
version = "6.0.0"
features = ["secure"]

[dependencies.hyper]
version = "0.14.19"
features = [
    "server",
    "http1",
    "runtime",
    "tcp",
    "stream",
]

[dependencies.tokio]
version = "1.18.2"
features = [ "full" ]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
